# luki-memory-service

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  FORCE_RESTART.txt  MANIFEST.in  Procfile  README.md  download_models.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements-railway.txt  requirements.txt
ingestion/: elr_ingestion.py
luki_memory/: __init__.py  config.py
luki_memory/api/: __init__.py  app.py  auth.py  config.py  grpc.proto  http.py  main.py  models.py  policy_client.py
luki_memory/api/endpoints/: __init__.py  auth.py  delete.py  ingestion.py  metrics.py  search.py  users.py
luki_memory/audit/: logger.py  versions.py
luki_memory/auth/: consent.py  rbac.py
luki_memory/ingestion/: __init__.py  chunker.py  elr_ingestion.py  embedder.py  embedding_integration.py  pipeline.py  redact.py
luki_memory/integrations/: __init__.py  supabase_integration.py
luki_memory/metrics/: __init__.py  elr_metrics.py
luki_memory/schemas/: elr.py  kv.py  query.py
luki_memory/storage/: __init__.py  elr_store.py  knowledge_store.py  kv_store.py  session_store.py  vector_store.py
luki_memory/utils/: ids.py
scripts/: README.md  run_api_server.py  run_dev.sh
tests/: test_elr_ingestion.py  test_embedding_store.py
tests/api/: conftest.py  test_metrics_endpoints.py
tests/unit/: test_elr_metrics.py  test_pipeline.py  test_vector_store.py
tests/validation/: README.md
